# client-connector

./: .bandit  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  package-lock.json  pyproject.toml  requirements.txt  test.py
.github/: deployment.yaml
.github/workflows/: deploy.yml
app/: __init__.py  auth.py  cache.py  config.py  context.py  interfaces.py  main.py  mcp_main.py  mcp_server.py
app/api/: __init__.py  agent_routes.py  mcp_sse.py  websocket.py
app/auth/: __init__.py  internal_token.py  middleware.py
app/confuse_common/config/: base_config.py
app/confuse_common/events/: __init__.py  events.py  producer.py
app/confuse_common/middleware/: auth.py
app/db/: __init__.py  connection.py  models.py
app/db/migrations/: env.py
app/grpc/: channel.py
app/infra/db/: postgres.py
app/infra/events/: __init__.py  config.py  producer.py
app/infra/events/common/: events.py  topics.py
app/infra/grpc/: clients.py  server.py
app/proto/: auth_pb2.py  auth_pb2_grpc.py  client_pb2.py  client_pb2_grpc.py
app/schemas/: __init__.py  agent.py  mcp.py
app/security/: auth.py
app/services/: __init__.py  base_http_client.py  mcp_client.py  mcp_gateway.py  prompt_compressor.py  query_processor.py  session.py  toggle_client.py
auth/: middleware.py
docs/: README.md  api-reference.md  architecture.md  setup.md
gateway/: __init__.py  mcp_client.py
infra/grpc/: clients.py  server.py
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
models/: __init__.py
proto/: client.proto
scratch/: check_db.py  test_agent_api.py
scripts/: deploy.sh  security_audit.py  test_mcp_connection.py
session/: __init__.py  manager.py
tests/: check_agents.py  conftest.py  seed_agents.py  test_mcp_connection.py  test_phase0_security.py  test_phase1.py  test_websocket.py  test_websocket_auth.py
tests/unit/: conftest.py  test_cache.py  test_context.py  test_grpc_channel.py  test_internal_token.py  test_subprocess_env_guard.py
transports/: websocket.py
