[project]
name = "client-connector"
version = "0.1.0"
description = "MCP Host Connector - Gateway for AI agents to connect to ConFuse infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    
    # MCP Server
    "mcp>=1.28.0",
    "fastmcp>=3.4.2",
    
    # WebSocket support
    "websockets>=16.0",
    
    # HTTP client
    "httpx>=0.28.1",
    
    "passlib[bcrypt]>=1.7.4",
    
    # Data validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    
    # Database
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.51",
    
    # Async utilities
    "anyio>=4.14.0",
    
    # Logging
    "structlog>=26.1.0",
    
    # Environment
    "python-dotenv>=1.2.2",
    
    # gRPC support
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "black>=26.5.1",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
